crates/tests/libs/bindgen/data/error/non_type_generic_not_supported/input.rdl

#[winrt]
mod Test {
    delegate fn Handler<'a>(a: i32);
}
        